<resources>
    <string name="app_name">Mega Weather</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="location">Location</string>
    <string name="country">Country:</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="weather">Get Weather Info</string>
    <string name="mintmp">Min-Temp</string>
    <string name="maxtmp">Max-Temp</string>
    <string name="f">F</string>
    <string name="c">C</string>
    <string name="info">I</string>
    <string name="hint"></string>
    <string name="about">Mega Weather\nDeveloped By: Mohamed Abdelaziz\nE-mail:mohamedsaleh1984@hotmail.com</string>
</resources>
