<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.practice.mega.openweather.OpenWeatherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/topPanel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        >

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/location"
            android:hint="@string/hint"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".5"
            />
        <EditText
            android:id="@+id/editTextLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/hint"
            android:minLines="1"
            android:maxLength="20"
            android:inputType="text"
            android:ems="10"/>
        <requestFocus />
        />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".5"
            />
        <ImageButton
            android:id="@+id/btnInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:onClick="Info"
            android:src="@drawable/icon"
            android:text="@string/info" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGetWeather"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topPanel"
        android:onClick="GetWeatherInfo"
        android:hint="@string/hint"
        android:text="@string/weather"/>

    <TextView
        android:id="@+id/textViewCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topPanel"
        android:layout_marginTop="68dp"
        android:hint="@string/hint"
        android:text="@string/country"
        android:layout_alignLeft="@id/topPanel"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/editTextCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewCountry"
        android:layout_alignBaseline="@id/textViewCountry"
        android:layout_marginLeft="32dp"
        android:maxLength="20"
        android:maxLines="1"
        android:minLines="1"
        android:hint="@string/hint"
        android:ems="10" >

    </TextView>

    <TextView
        android:id="@+id/textViewTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCountry"
        android:layout_marginTop="32dp"
        android:layout_alignLeft="@id/textViewCountry"
        android:text="@string/temperature"
        android:hint="@string/hint"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTemp"
        android:layout_below="@+id/textViewTemp"
        android:layout_marginTop="32dp"
        android:text="@string/humidity"
        android:hint="@string/hint"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignStart="@+id/textViewTemp" />

    <TextView
        android:id="@+id/editTextHumidty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textViewHumidity"
       android:layout_toRightOf="@id/textViewHumidity"
        android:layout_alignLeft="@id/editTextCountry"
        android:maxLength="20"
        android:maxLines="1"
        android:minLines="1"
        android:ems="10"
        android:hint="@string/hint"
        android:layout_alignStart="@id/editTextCountry"
        android:layout_toEndOf="@id/textViewHumidity" />

    <TextView
        android:id="@+id/editTextTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewTemp"
        android:layout_toRightOf="@+id/textViewTemp"
        android:layout_alignLeft="@id/editTextCountry"
        android:hint="@string/hint"
        android:ems="10"
        android:layout_alignStart="@id/editTextCountry" />

    <TextView
        android:id="@+id/textViewPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewHumidity"
        android:layout_below="@+id/textViewHumidity"
        android:layout_marginTop="32dp"
        android:text="@string/pressure"
        android:hint="@string/hint"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/editTextPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewPressure"
        android:layout_alignLeft="@id/editTextCountry"
        android:layout_toRightOf="@+id/textViewPressure"
        android:hint="@string/hint"
        android:ems="10"
        android:layout_toEndOf="@+id/textViewPressure"
        android:layout_alignStart="@id/editTextCountry" />

    <TextView
        android:id="@+id/textViewMaxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewHumidity"
        android:layout_below="@+id/textViewPressure"
        android:layout_marginTop="32dp"
        android:text="@string/maxtmp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignStart="@+id/textViewHumidity" />

    <TextView
        android:id="@+id/edittextMaxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewMaxTemp"
        android:layout_alignLeft="@id/editTextCountry"
        android:layout_toRightOf="@+id/textViewMaxTemp"
        android:hint="@string/hint"
        android:ems="10"
        android:layout_toEndOf="@+id/textViewMaxTemp"
        android:layout_alignStart="@id/editTextCountry" />

    <TextView
        android:id="@+id/textViewMinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewHumidity"
        android:layout_below="@+id/textViewMaxTemp"
        android:layout_marginTop="32dp"
        android:text="@string/mintmp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignStart="@+id/textViewHumidity" />

    <TextView
        android:id="@+id/edittextMinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewMinTemp"
        android:layout_alignLeft="@id/editTextCountry"
        android:layout_toRightOf="@+id/textViewMinTemp"
        android:hint="@string/hint"
        android:ems="10" />

    <RadioGroup
        android:id="@+id/radioGroupTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btnGetWeather"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@id/btnGetWeather"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_toEndOf="@id/btnGetWeather">

        <RadioButton
            android:id="@+id/radioButtonFer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="switchFC"
            android:text="@string/f"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioButtonDeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:onClick="switchFC"
            android:text="@string/c"
            android:textSize="25sp" />
    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBarSpinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        tools:visibility="gone" />

</RelativeLayout>

    <!--
        <SwitchPreferenceCompat

            android:defaultValue="@bool/follow_default_message_subscription"
            android:key="@string/follow_key_switch_jlin"
            android:summaryOff="@string/c"
            android:summaryOn="@string/f"
            android:title="@string/Switch F/C" />
    !-->